--- a/deploy/csi-demo-driver.yaml
+++ b/deploy/csi-demo-driver.yaml
@@ -2,7 +2,7 @@ kind: DaemonSet
 apiVersion: apps/v1
 metadata:
   name: csi-demo-driver
-  namespace: csi-dev
+  namespace: default
 spec:
   selector:
     matchLabels:
