--- a/deploy/nginx.yaml
+++ b/deploy/nginx.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-test
-  namespace: csi-dev
+  namespace: default
   labels:
     app: nginx
 spec:
@@ -26,4 +26,4 @@ spec:
       volumes:
         - name: all-pvc
           persistentVolumeClaim:
-            claimName: csi-demo-driver-pvc-01
+            claimName: csi-demo-driver-pvc
