--- a/deploy/pvc.yaml
+++ b/deploy/pvc.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: csi-demo-driver-pvc-01
-  namespace: csi-dev
-  selfLink: /api/v1/namespaces/csi-dev/persistentvolumeclaims/csi-demo-driver-pvc-01
+  name: csi-demo-driver-pvc
+  namespace: default
+  selfLink: /api/v1/namespaces/default/persistentvolumeclaims/csi-demo-driver-pvc
 spec:
   accessModes:
   - ReadWriteOnce
