--- a/deploy/rbac.yaml
+++ b/deploy/rbac.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: csi-demo-driver
-  namespace: csi-dev
+  namespace: default
 
 ---
 kind: ClusterRole
@@ -64,7 +64,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: csi-demo-driver
-    namespace: csi-dev
+    namespace: default
 roleRef:
   kind: ClusterRole
   name: csi-demo-driver
