--- a/deploy/nginx.yaml
+++ b/deploy/nginx.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-test
+  name: demo-csi-nginx-test
   namespace: default
   labels:
-    app: nginx
+    app: demo-csi-nginx-test
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: nginx
+      app: demo-csi-nginx-test
   template:
     metadata:
       labels:
-        app: nginx
+        app: demo-csi-nginx-test
     spec:
       containers:
       - name: nginx
@@ -26,4 +26,4 @@ spec:
       volumes:
         - name: all-pvc
           persistentVolumeClaim:
-            claimName: csi-demo-driver-pvc
+            claimName: demo-csi-driver-pvc
