--- a/deploy/pvc.yaml
+++ b/deploy/pvc.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: csi-demo-driver-pvc
+  name: demo-csi-driver-pvc
   namespace: default
-  selfLink: /api/v1/namespaces/default/persistentvolumeclaims/csi-demo-driver-pvc
+  selfLink: /api/v1/namespaces/default/persistentvolumeclaims/demo-csi-driver-pvc
 spec:
   accessModes:
   - ReadWriteOnce
