--- a/deploy/rbac.yaml
+++ b/deploy/rbac.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: csi-demo-driver
+  name: demo-csi-driver
   namespace: default
 
 ---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: csi-demo-driver
+  name: demo-csi-driver
 rules:
   - apiGroups: [""]
     resources: ["secrets"]
@@ -60,12 +60,12 @@ rules:
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: csi-demo-driver
+  name: demo-csi-driver
 subjects:
   - kind: ServiceAccount
-    name: csi-demo-driver
+    name: demo-csi-driver
     namespace: default
 roleRef:
   kind: ClusterRole
-  name: csi-demo-driver
+  name: demo-csi-driver
   apiGroup: rbac.authorization.k8s.io
